--- a/index.html
+++ b/index.html
@@ -28,6 +28,38 @@
 
         </nav>
     </header>
+
+  <section class="hero-section">
+    <div class="hero-container">
+        <div class="hero-text">
+        <h1>Book your stay with Tripster</h1>
+        <p>1,480,086 rooms around the world are waiting for you!</p>
+        </div>
+       
+    </div>
+     <div class="hero-signup-button">
+           <div class="location hero-signup-div">
+          <p class="hero-signup-div-p1">Location</p>
+          <p class="hero-signup-div-p2">Where are you going?</p>
+
+           </div>
+           <div class="check-in hero-signup-div">
+<p class="hero-signup-div-p1">Check in</p>
+          <p class="hero-signup-div-p2">Add date</p>
+           </div>
+           <div class="check-out hero-signup-div">
+<p class="hero-signup-div-p1">Check out</p>
+          <p class="hero-signup-div-p2">Add date</p>
+           </div>
+           <div class="guests hero-signup-div">
+<p class="hero-signup-div-p1">Guests</p>
+          <p class="hero-signup-div-p2">Number of guests</p>
+           </div>
+           <div class="arrow-button">
+            <img src="/images/icons8-arrow-right-30.png" alt="">
+           </div>
+        </div>
+  </section>
 </body>
 <script src="/scripts/script.js"></script>
 </html>
